--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@grpc/proto-loader": "^0.6.2",
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/cqrs": "^7.0.1",
     "@nestjs/microservices": "^7.6.17",
     "@nestjs/platform-express": "^7.6.15",
     "grpc": "^1.24.10",
